<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Details</string>

    <string name="preference_location">Location</string>
    <string name="pref_loc_key" translatable="false">location</string>
    <string name="pref_loc_default_value" translatable="false">30080</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_default_value" translatable="false">M</string>
    <string name="pref_units_title">Temperature Units</string>
    <string name="pref_turn_off_notification_key" translatable="false">turnOffNotification</string>
    <string name="pref_turn_off_notification_text">Turn off Notifications</string>
    <string name="pref_location_status_key">locationStatus</string>

    <string name="view_map">View in Map</string>
    <string name="menu_share">Share</string>
    <string name="hashtag_sunshine">#SunshineApp</string>
    <string name="pref_units_metric">M</string>
    <string name="pref_units_imperial">I</string>
    <string name="display_pref_units_metric">Metric</string>
    <string name="display_pref_units_imperial">Imperial</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>,
        <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">palaniyappan.example.com</string>
    <string name="content_authority">com.example.palaniyappan.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="emtpy_view_text">No Weather Information available</string>
    <string name="emtpy_view_text_no_network">No Weather Information available. The network is not available to fetch weather data.</string>
    <string name="empty_view_server_invalid">No Weather Information available. Invalid server.</string>
    <string name="empty_view_server_down">No Weather Information available. The weather server is down. Please try after sometime.</string>
    <string name="empty_view_location_invalid">No Weather Information available. The location in settings is not recognized by weather server.</string>

    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
</resources>
