<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/pref_loc_key"
        android:title="@string/preference_location"
        android:defaultValue="@string/pref_loc_default_value"
        android:inputType="text"
        android:singleLine="true"/>

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:defaultValue="@string/pref_units_default_value"
        android:entries="@array/pref_unit_list"
        android:entryValues="@array/pref_unit_values" />

    <CheckBoxPreference
        android:key="@string/pref_turn_off_notification_key"
        android:title="@string/pref_turn_off_notification_text"
        android:defaultValue="false" />
</PreferenceScreen>
